--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cloud_firestore_platform_interface: 6.2.3
   cloud_firestore_web: 3.12.3
   collection: 1.18.0
+  dropdown_button2: 2.3.9
   emoji_flag_converter: 1.1.0
   file_picker: 8.0.3
   firebase_auth: 4.19.5
@@ -54,7 +55,7 @@ dependencies:
   google_fonts: 6.1.0
   google_sign_in: 6.1.5
   google_sign_in_android: 6.1.20
-  google_sign_in_ios: 5.6.4
+  google_sign_in_ios: 5.7.6
   google_sign_in_platform_interface: 2.4.2
   google_sign_in_web: 0.12.1
   image_picker: 1.0.4
