--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,10 @@ dependencies:
   firebase_performance: 0.9.4+5
   firebase_performance_platform_interface: 0.1.4+33
   firebase_performance_web: 0.1.6+5
+  flip_card: 0.7.0
   flutter_animate: 4.5.0
   flutter_cache_manager: 3.3.1
+  flutter_slidable: 3.0.1
   font_awesome_flutter: 10.6.0
   from_css_color: 2.0.0
   go_router: 12.1.3
@@ -73,6 +75,7 @@ dependencies:
   sign_in_with_apple_web: 1.0.1
   sqflite: 2.2.6
   stream_transform: 2.1.0
+  table_calendar: 3.1.1
   timeago: 3.6.1
   url_launcher: 6.2.5
   url_launcher_android: 6.3.0
