--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,11 @@ dependencies:
     sdk: flutter
   auto_size_text: 3.0.0
   cached_network_image: 3.3.1
-  carousel_slider: 4.2.1
   cloud_firestore: 4.17.3
   cloud_firestore_platform_interface: 6.2.3
   cloud_firestore_web: 3.12.3
   collection: 1.18.0
+  dropdown_button2: 2.3.9
   emoji_flag_converter: 1.1.0
   expandable: 5.0.1
   firebase_auth: 4.19.5
