--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -34,8 +34,8 @@
             <string>Editor</string>
             <key>CFBundleURLSchemes</key>
             <array>
-                <!--FF_REVERSED_CLIENT_ID-->
-                
+                <string>com.googleusercontent.apps.857675165794-0phqqt60tfoa5fbqmqctr5d19dqvcjr8</string>
+                <string>fb1735168520351694</string>
             </array>
         </dict>
 
@@ -53,6 +53,10 @@
     <key>FlutterDeepLinkingEnabled</key>
     <true/>
 
+    <key>FacebookAppID</key>
+    <string>1735168520351694</string>
+    <key>FacebookDisplayName</key>
+    <string>FlutterAuth</string>
 
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
@@ -62,6 +66,25 @@
 
 
 
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+      <string>fbapi</string>
+      <string>fbapi20130214</string>
+      <string>fbapi20130410</string>
+      <string>fbapi20130702</string>
+      <string>fbapi20131010</string>
+      <string>fbapi20131219</string>
+      <string>fbapi20140410</string>
+      <string>fbapi20140116</string>
+      <string>fbapi20150313</string>
+      <string>fbapi20150629</string>
+      <string>fbapi20160328</string>
+      <string>fbauth</string>
+      <string>fb-messenger-share-api</string>
+      <string>fbauth2</string>
+      <string>fbshareextension</string>
+
+    </array>
 
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
