--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  animated_text_kit: ^4.2.2
   auto_size_text: 3.0.0
   cached_network_image: 3.3.1
   cloud_firestore: 4.17.3
@@ -45,6 +46,7 @@ dependencies:
   firebase_performance_web: 0.1.6+5
   flutter_animate: 4.5.0
   flutter_cache_manager: 3.3.1
+  flutter_facebook_auth: 4.0.0
   font_awesome_flutter: 10.6.0
   from_css_color: 2.0.0
   go_router: 12.1.3
