--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   image_picker_platform_interface: 2.9.1
   intl: 0.19.0
   json_path: 0.7.2
+  lottie: 2.7.0
   mime_type: 1.0.0
   page_transition: 2.1.0
   path_provider: 2.1.3
@@ -88,7 +89,6 @@ dependencies:
   sqflite: 2.2.6
   stream_transform: 2.1.0
   styled_divider: 1.0.4
-  table_calendar: 3.1.1
   timeago: 3.6.1
   url_launcher: 6.2.5
   url_launcher_android: 6.3.0
